--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>uk.co.optimisticpanda</groupId>
-	<artifactId>stdout-timer</artifactId>
+	<artifactId>jnomon</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<properties>
@@ -48,7 +48,7 @@
 							<transformers>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>uk.co.optimisticpanda.stdouttimer.Input</mainClass>
+									<mainClass>uk.co.optimisticpanda.jnomon.Main</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
