--- a/pom.xml
+++ b/pom.xml
@@ -89,8 +89,9 @@
 				<version>0.7.5.201505241946</version>
 				<configuration>
 					<excludes>
-					    <!-- Generated classes  -->
-						<exclude>uk/co/optimisticpanda/jnomon/*StepImpl</exclude>
+						<!-- Generated classes -->
+						<exclude>uk/co/optimisticpanda/jnomon/LineStepImpl*</exclude>
+						<exclude>uk/co/optimisticpanda/jnomon/TickStepImpl*</exclude>
 					</excludes>
 				</configuration>
 				<executions>
