--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
 							<transformers>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>uk.co.optimisticpanda.jnomon.Runner</mainClass>
+									<mainClass>uk.co.optimisticpanda.jnomon.Main</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
@@ -90,7 +90,8 @@
 				<configuration>
 					<excludes>
 						<!-- Immutables Generated classes -->
-						<exclude>uk/co/optimisticpanda/jnomon/LineEventImpl*</exclude>
+						<exclude>uk/co/optimisticpanda/jnomon/Main*</exclude>
+                                                <exclude>uk/co/optimisticpanda/jnomon/LineEventImpl*</exclude>
 						<exclude>uk/co/optimisticpanda/jnomon/TickEventImpl*</exclude>
                                                 <exclude>uk/co/optimisticpanda/jnomon/formatter/EventListener*</exclude>	
 				</excludes>
